src/test/ui/issues/issue-41139.stderr
error[E0618]: expected function, found `&dyn std::ops::Fn() -> (dyn Trait + 'static)`
  --> $DIR/issue-41139.rs:8:27
   |
LL | fn get_function<'a>() -> &'a dyn Fn() -> dyn Trait { panic!("") }
   | ----------------------------------------------------------------- `get_function` defined here returns `&dyn std::ops::Fn() -> (dyn Trait + 'static)`
...
LL |     let t : &dyn Trait = &get_function()();
   |                           ^^^^^^^^^^^^^^--
   |                           |
   |                           call expression requires function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0618`.
